# western

./: Network.hs  README.md  Types.hs  Western.hs  net1  net2  western.cabal
app/: Main.hs
src/Western/: Game.hs  Network.hs  Render.hs  Training.hs  Types.hs
test/: Spec.hs
