name:                western
version:             0.1.0.0
synopsis:            Train artificial neural networks to play a shootout turn-based game against each other
description:         Please see README.md
homepage:            https://github.com/dimashenme/western#readme
license:             BSD3
license-file:        LICENSE
author:              Kostya Tolmachev, Dima Sustretov
maintainer:          dmitri83@hcoop.net
copyright:           2016 Kostya Tolmachev, Dima Sustretov
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Western.Network, Western.Game, Western.Render, Western.Training
  build-depends:       MonadRandom
                     , array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , containers >= 0.5.6.2
                     , data-default >= 0.5.3
                     , matrix
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , stm >= 2.4.4.1
                     , transformers >= 0.4.2.0
                     , vty
  default-language:    Haskell2010

executable western-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       MonadRandom
                     , QuickCheck
                     , array >= 0.5.1.0
                     , base
                     , containers >= 0.5.6.2
                     , data-default >= 0.5.3
                     , matrix
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , stm >= 2.4.4.1
                     , transformers >= 0.4.2.0
                     , vty
                     , western
  default-language:    Haskell2010

test-suite western-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       MonadRandom
                     , QuickCheck >= 2.8.2
                     , array >= 0.5.1.0
                     , base
                     , containers >= 0.5.6.2
                     , data-default >= 0.5.3
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , stm >= 2.4.4.1
                     , transformers >= 0.4.2.0
                     , western
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dimashenme/western
